delete pass email .env

--- a/.env.prod
+++ b/.env.prod
@@ -50,7 +50,7 @@ MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=465
 MAIL_USERNAME=notificacion.intranet@fps.gov.co
-MAIL_PASSWORD=fgbcqxydzqhcfgyc
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS="notificacion.intranet@fps.gov.co"
 MAIL_FROM_NAME="${APP_NAME}"
